# 2020-04_kaggle_tweet_sentiment_extraction

./: .gitignore  README.md  activate.sh  pyproject.toml
data/ml-ready/: .gitignore
data/processed/: train.csv  validation.csv
tests/: test_tweet_sentiment_extraction.py
tests/domain/: correct_output.py
tweet_sentiment_extraction/application/: .gitignore  explo_ner_spacy.py  explo_tokenize.py  generate_datasets.py  generate_validation_data.py  run_baseline.py  run_bilstm_spacy.py  run_brnn_crf_spacy_tokens.py  run_rf.py  run_rnn.py  run_rnn_spacy_tokens.py  run_rnn_tf.py
tweet_sentiment_extraction/domain/: bi_lstm.py  bi_lstm_crf.py  correct_output.py  dataset_builder.py  metrics.py  sentence_constructor.py  tensorflow_crf.py  text_selector.py  word_embedding.py
tweet_sentiment_extraction/infrastructure/: sentence_cleaner.py
tweet_sentiment_extraction/settings/: .env_template  __init__.py  base.py
tweet_sentiment_extraction/utils/: decorators.py  metrics.py
