[tool.poetry]
name = "tweet_sentiment_extraction"
version = "0.1.0"
description = ""
authors = ["Vinh Pham-Gia <vinhpg45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
python-dotenv = "^0.13.0"
sklearn = "^0.0"
spacy = "^2.2.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"
ipython = "^7.13.0"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
