[tool.poetry]
name = "tweet_sentiment_extraction"
version = "0.1.0"
description = ""
authors = ["Alexandra Lorenzo de Brionne", "Benoit Lebreton", "Vinh Pham-Gia"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
python-dotenv = "^0.13.0"
sklearn = "^0.0"
spacy = "^2.2.4"
torch = "^1.5.0"
gensim = "^3.8.2"
tqdm = "^4.45.0"
tensorflow = "^2.1.0"
tensorflow-estimator = "==2.1.0"
vaderSentiment = "^3.3.1"
tensorflow_addons = "^0.9.1"
joblib = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"
ipython = "^7.13.0"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
